# ichigeki

./: .gitignore  Dockerfile  GAME_SPEC.md  add_effect_sprites.py  add_player_sprites.py  add_sounds.py  create_pyxel_resource.py  docker-compose.yml  pyproject.toml  run_pyxel_on_host.sh
.github/workflows/: ci.yml
assets/: game.pyxres
docker/: Dockerfile  docker-compose.yml  run_with_xvfb.sh
docs/: GAME_SPEC.md  HOW_TO_RUN_PYXEL.md  README.md  TECHNICAL_REQUIREMENTS.md
src/: main.py
tests/: __init__.py  test_main.py
