[project]
name = "Ichigekeen"
version = "0.1.0"
description = "A one-hit kill retro fighting game made with Pyxel."
requires-python = ">=3.9"
dependencies = [
    "pyxel>=1.9.0",  # Or a more specific version like "pyxel==1.9.15"
]
# Add other fields like authors, license later if desired

[project.optional-dependencies]
dev = [
    "ruff",
    "coverage[toml]"
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP", # pyupgrade
    "PL", # Pylint
    "C4", # flake8-comprehensions
    "PT", # flake8-pytest-style
    "SIM",# flake8-simplify
    "TID",# flake8-tidy-imports
    "ARG",# flake8-unused-arguments
]
ignore = [
    "PLW0603",  # Using the global statement is discouraged
    "PT009",    # Use regular assert instead of unittest-style assertEqual
    "E402",     # Module level import not at top of file
    "I001",     # Import block is un-sorted or un-formatted
    "W293",     # Blank line contains whitespace
    "ARG002",   # Unused method argument
    "ERA001"    # Found commented-out code
]

[tool.ruff.lint.isort]
known-first-party = ["src"] # Assuming 'src' is our main source directory

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
